--- a/VK_lesson_2/Base.lproj/Main.storyboard
+++ b/VK_lesson_2/Base.lproj/Main.storyboard
@@ -214,7 +214,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Далее" id="hL7-PH-UVd">
                             <connections>
-                                <segue destination="Nhi-No-WMg" kind="show" id="sJ1-tj-HDG"/>
+                                <segue destination="Nhi-No-WMg" kind="show" identifier="allFotoFriend" id="sJ1-tj-HDG"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -238,19 +238,28 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Pzo-jO-YJ1">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="172" height="110"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Fqe-65-ftB">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="friendFotos" id="Fqe-65-ftB" customClass="FriendFotoCell" customModule="VK_lesson_2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="172" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="172" height="110"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kfX-J8-iTb">
+                                                    <rect key="frame" x="7" y="0.0" width="165" height="110"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
+                                        <connections>
+                                            <outlet property="friendFotos" destination="kfX-J8-iTb" id="wgK-Ud-K1w"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -265,10 +274,13 @@
                         <viewLayoutGuide key="safeArea" id="NiM-PD-bRE"/>
                     </view>
                     <navigationItem key="navigationItem" title="Фотографии" id="ioJ-DT-C89"/>
+                    <connections>
+                        <outlet property="collectionView" destination="iBr-43-ib6" id="fYk-Kt-Kw5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXt-Kr-tI6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4207" y="830"/>
+            <point key="canvasLocation" x="4205.6000000000004" y="829.83508245877067"/>
         </scene>
         <!--Все группы-->
         <scene sceneID="6P0-Ul-db4">
