add groups and all groups

--- a/VK_lesson_2/Base.lproj/Main.storyboard
+++ b/VK_lesson_2/Base.lproj/Main.storyboard
@@ -133,13 +133,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="mow-sA-T8v" customClass="GroupTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupsCell" id="mow-sA-T8v" customClass="GroupTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mow-sA-T8v" id="pug-Oq-56g">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="30H-rf-FDc" userLabel="Group logo">
+                                            <rect key="frame" x="5" y="-3" width="54" height="41"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNj-rJ-tNF" userLabel="Group name">
+                                            <rect key="frame" x="67" y="0.0" width="302" height="38"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="groupLogo" destination="30H-rf-FDc" id="F1l-EB-6rs"/>
+                                    <outlet property="groupName" destination="WNj-rJ-tNF" id="95M-R7-EG1"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -154,9 +171,10 @@
                                 <action selector="backAuthGroup:" destination="l57-zn-G54" id="rK1-an-2Xq"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Next" id="iZe-Fv-8lg">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="iZe-Fv-8lg">
                             <connections>
-                                <segue destination="Lvj-JD-nde" kind="show" id="Ufy-AR-iWJ"/>
+                                <action selector="addGroupWithSegue:" destination="l57-zn-G54" id="33J-TF-7Bm"/>
+                                <segue destination="Lvj-JD-nde" kind="show" identifier="addGroup" id="Ufy-AR-iWJ"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -285,19 +303,36 @@
         <!--Все группы-->
         <scene sceneID="6P0-Ul-db4">
             <objects>
-                <tableViewController id="Lvj-JD-nde" sceneMemberID="viewController">
+                <tableViewController id="Lvj-JD-nde" customClass="AllGroupsTableViewController" customModule="VK_lesson_2" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="rvu-DN-bAX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="wvG-08-dqA">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="allGroupsCell" id="wvG-08-dqA" customClass="AllGroupsCellTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wvG-08-dqA" id="oQw-LZ-5AQ">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Tr-EA-SNZ" userLabel=" Group logo">
+                                            <rect key="frame" x="16" y="-1" width="78" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iq3-Kh-YUN" userLabel="Group name">
+                                            <rect key="frame" x="102" y="0.0" width="257" height="43"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="allGroupLogo" destination="8Tr-EA-SNZ" id="N1q-Gp-CHK"/>
+                                    <outlet property="allGroupName" destination="Iq3-Kh-YUN" id="gPG-ca-LYY"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
