--- a/VK_lesson_2/Base.lproj/Main.storyboard
+++ b/VK_lesson_2/Base.lproj/Main.storyboard
@@ -128,30 +128,45 @@
         <scene sceneID="r9a-B0-ZYu">
             <objects>
                 <tableViewController id="l57-zn-G54" customClass="GroupTableViewController" customModule="VK_lesson_2" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="nt7-MG-lJ5">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" id="nt7-MG-lJ5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupsCell" id="mow-sA-T8v" customClass="GroupTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupsCell" rowHeight="44" id="mow-sA-T8v" customClass="GroupTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mow-sA-T8v" id="pug-Oq-56g">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="30H-rf-FDc" userLabel="Group logo">
-                                            <rect key="frame" x="5" y="-3" width="54" height="41"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="30H-rf-FDc" userLabel="Group logo">
+                                            <rect key="frame" x="0.0" y="0.0" width="54" height="44.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="44" id="KSx-zB-Rr7"/>
+                                                <constraint firstAttribute="width" constant="54" id="r09-dN-zqf"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNj-rJ-tNF" userLabel="Group name">
-                                            <rect key="frame" x="67" y="0.0" width="302" height="38"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNj-rJ-tNF" userLabel="Group name">
+                                            <rect key="frame" x="62" y="0.0" width="313" height="44.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="44" id="MzZ-Zc-tqj"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="30H-rf-FDc" firstAttribute="leading" secondItem="pug-Oq-56g" secondAttribute="leading" id="6j0-8i-cTV"/>
+                                        <constraint firstAttribute="bottom" secondItem="30H-rf-FDc" secondAttribute="bottom" id="8R9-ez-p70"/>
+                                        <constraint firstItem="WNj-rJ-tNF" firstAttribute="leading" secondItem="30H-rf-FDc" secondAttribute="trailing" constant="8" id="8ko-6m-Za5"/>
+                                        <constraint firstItem="WNj-rJ-tNF" firstAttribute="top" secondItem="30H-rf-FDc" secondAttribute="top" priority="999" id="BdE-KE-58e"/>
+                                        <constraint firstItem="WNj-rJ-tNF" firstAttribute="bottom" secondItem="30H-rf-FDc" secondAttribute="bottom" id="MHH-8N-58j"/>
+                                        <constraint firstItem="WNj-rJ-tNF" firstAttribute="top" secondItem="pug-Oq-56g" secondAttribute="top" id="OeT-Hn-ruG"/>
+                                        <constraint firstAttribute="bottom" secondItem="WNj-rJ-tNF" secondAttribute="bottom" id="Zpx-ms-OoJ"/>
+                                        <constraint firstAttribute="trailing" secondItem="WNj-rJ-tNF" secondAttribute="trailing" id="hqf-OA-IPA"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="groupLogo" destination="30H-rf-FDc" id="F1l-EB-6rs"/>
@@ -304,14 +319,14 @@
         <scene sceneID="6P0-Ul-db4">
             <objects>
                 <tableViewController id="Lvj-JD-nde" customClass="AllGroupsTableViewController" customModule="VK_lesson_2" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="rvu-DN-bAX">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="-1" sectionFooterHeight="-1" id="rvu-DN-bAX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="sectionIndexColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="sectionIndexBackgroundColor" red="0.22287741650000001" green="0.34978891150000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" text="" showsCancelButton="YES" id="w35-4k-UFa">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="336" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.22287741650000001" green="0.34978891150000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="tintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
@@ -329,18 +344,33 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Tr-EA-SNZ" userLabel=" Group logo">
-                                            <rect key="frame" x="16" y="-1" width="78" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Tr-EA-SNZ" userLabel=" Group logo">
+                                            <rect key="frame" x="0.0" y="0.0" width="55" height="44.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="55" id="3lA-AG-kZJ"/>
+                                                <constraint firstAttribute="height" constant="44" id="nxN-6d-Qtr"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iq3-Kh-YUN" userLabel="Group name">
-                                            <rect key="frame" x="102" y="0.0" width="257" height="43"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iq3-Kh-YUN" userLabel="Group name">
+                                            <rect key="frame" x="65" y="0.0" width="310" height="44.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="44" id="jns-mZ-3o6"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="8Tr-EA-SNZ" secondAttribute="bottom" id="46A-1U-woa"/>
+                                        <constraint firstItem="8Tr-EA-SNZ" firstAttribute="leading" secondItem="oQw-LZ-5AQ" secondAttribute="leading" id="9sQ-BM-9IO"/>
+                                        <constraint firstAttribute="bottom" secondItem="Iq3-Kh-YUN" secondAttribute="bottom" id="Aro-r0-CkS"/>
+                                        <constraint firstItem="Iq3-Kh-YUN" firstAttribute="leading" secondItem="8Tr-EA-SNZ" secondAttribute="trailing" constant="10" id="FUE-e6-thL"/>
+                                        <constraint firstAttribute="bottom" secondItem="Iq3-Kh-YUN" secondAttribute="bottom" id="VMK-pk-9dA"/>
+                                        <constraint firstItem="Iq3-Kh-YUN" firstAttribute="top" secondItem="oQw-LZ-5AQ" secondAttribute="top" id="at9-Wz-03o"/>
+                                        <constraint firstAttribute="trailing" secondItem="Iq3-Kh-YUN" secondAttribute="trailing" multiplier="1:1" id="oKd-uC-zi8"/>
+                                        <constraint firstItem="8Tr-EA-SNZ" firstAttribute="top" secondItem="oQw-LZ-5AQ" secondAttribute="top" id="syD-ed-EAB"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="allGroupLogo" destination="8Tr-EA-SNZ" id="N1q-Gp-CHK"/>
@@ -364,7 +394,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S2D-Fk-9cE" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="toK-Hv-m6h" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4952.8000000000002" y="22.938530734632685"/>
+            <point key="canvasLocation" x="4952.1739130434789" y="22.826086956521742"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="8r2-In-MHA">
