--- a/VK_lesson_2/Base.lproj/Main.storyboard
+++ b/VK_lesson_2/Base.lproj/Main.storyboard
@@ -207,29 +207,74 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FriendsCell" id="lc1-4S-zc0" customClass="FriendsTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FriendsCell" rowHeight="86" id="lc1-4S-zc0" customClass="FriendsTableViewCell" customModule="VK_lesson_2" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="86"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lc1-4S-zc0" id="qNC-GM-8MB">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="85.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-1e-zaY" userLabel="Friend logo">
-                                            <rect key="frame" x="17" y="0.0" width="62" height="41"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Friend name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xn-uY-bIp" userLabel="Friend Name">
-                                            <rect key="frame" x="94" y="2" width="265" height="30"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friend name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xn-uY-bIp" userLabel="Friend Name">
+                                            <rect key="frame" x="54" y="0.0" width="321" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J4h-gi-cuu" userLabel="ShadowView" customClass="ShadowView" customModule="VK_lesson_2" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                                            <subviews>
+                                                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-1e-zaY" userLabel="Friend logo">
+                                                    <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="8eR-tD-1aB"/>
+                                                        <constraint firstAttribute="height" constant="44" id="CNK-5K-TGG"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="44" id="TSf-dF-TJF"/>
+                                                <constraint firstAttribute="height" constant="44" id="WPO-PJ-PZJ"/>
+                                                <constraint firstItem="XAf-1e-zaY" firstAttribute="leading" secondItem="J4h-gi-cuu" secondAttribute="leading" id="cZF-Fg-Zmk"/>
+                                                <constraint firstItem="XAf-1e-zaY" firstAttribute="top" secondItem="J4h-gi-cuu" secondAttribute="top" id="hnS-MD-Fsp"/>
+                                                <constraint firstAttribute="trailing" secondItem="XAf-1e-zaY" secondAttribute="trailing" id="oLH-4I-Qk1"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                                                    <real key="value" value="12"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                                                    <real key="value" value="0.5"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                                    <size key="value" width="-2" height="3"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                                    <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="5xn-uY-bIp" secondAttribute="trailing" id="6ZX-yw-thh"/>
+                                        <constraint firstAttribute="bottom" secondItem="J4h-gi-cuu" secondAttribute="bottom" id="Dvh-sd-7mv"/>
+                                        <constraint firstAttribute="bottom" secondItem="5xn-uY-bIp" secondAttribute="bottom" id="ImH-y1-PhS"/>
+                                        <constraint firstItem="J4h-gi-cuu" firstAttribute="leading" secondItem="qNC-GM-8MB" secondAttribute="leading" id="Lc4-hM-lAb"/>
+                                        <constraint firstItem="5xn-uY-bIp" firstAttribute="leading" secondItem="J4h-gi-cuu" secondAttribute="trailing" constant="10" id="Qcx-ib-0MO"/>
+                                        <constraint firstItem="J4h-gi-cuu" firstAttribute="top" secondItem="qNC-GM-8MB" secondAttribute="top" id="eoA-HX-WQK"/>
+                                        <constraint firstItem="5xn-uY-bIp" firstAttribute="top" secondItem="qNC-GM-8MB" secondAttribute="top" id="ns9-Rb-46g"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="14"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <outlet property="friendLogo" destination="XAf-1e-zaY" id="f5c-9Z-txl"/>
+                                    <outlet property="friendLogo" destination="XAf-1e-zaY" id="M9B-w7-dyP"/>
                                     <outlet property="friendName" destination="5xn-uY-bIp" id="Jjc-gE-Mdh"/>
+                                    <outlet property="shadowView" destination="J4h-gi-cuu" id="hi8-n5-GSF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -326,7 +371,7 @@
                         <color key="sectionIndexColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="sectionIndexBackgroundColor" red="0.22287741650000001" green="0.34978891150000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" text="" showsCancelButton="YES" id="w35-4k-UFa">
-                            <rect key="frame" x="0.0" y="0.0" width="336" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.22287741650000001" green="0.34978891150000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="tintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
